# test_docker

./: .gitignore  README.md
stage1/: CMakeLists.txt  Dockerfile  README.md  test.cpp
stage2/: CMakeLists.txt  Dockerfile  README.md  test.cpp
stage2/proto/: CMakeLists.txt  test.proto
stage2/proto2/: CMakeLists.txt  test2.proto
stage3/: CMakeLists.txt  README.md  test.cpp
stage4/: README.md
stage4/client/: Dockerfile  client.cpp
stage4/mybaseimage/: dockerfile
stage4/server/: Dockerfile  server.cpp
stage5/: README.md
stage5/project/: Dockerfile  client.conf  client.cpp  docker-compose.yml
stage6/: README.md
stage7/: README.md
